force-app/main/default/objects/Book__c/Book__c.object-meta.xml
<CustomObject>
    <description>Creating an object for Test</description>
    <label>Book</label>
    <nameField>
        <label>book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>book</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>