force-app/main/default/objects/Book__c/fields/Book_Lists__c.field-meta.xml
<CustomField>
    <fullName>Book_Lists__c</fullName>
    <description>This  is the picklist value testing</description>
    <label>Book Lists</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chemistry</fullName>
            </value>
            <value>
                <fullName>Physics</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Maths</fullName>
            </value>
            <value>
                <fullName>Telugu</fullName>
                <isActive>false</isActive>
                <label>Telugu</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>