force-app/main/default/objects/Book__c/fields/EMail__c.field-meta.xml
<CustomField>
    <fullName>EMail__c</fullName>
    <description>Send an Email</description>
    <label>EMail</label>
    <type>Email</type>
</CustomField>