force-app/main/default/objects/Book__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <label>PostalCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>