force-app/main/default/objects/Book__c/fields/Price_of_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_of_Book__c</fullName>
    <label>Price_of_Book</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>