force-app/main/default/objects/Book__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <label>Province</label>
    <length>50</length>
    <type>Text</type>
</CustomField>