force-app/main/default/objects/Book__c/fields/StreetNo__c.field-meta.xml
<CustomField>
    <fullName>StreetNo__c</fullName>
    <description>This mention street No</description>
    <label>StreetNo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>